--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -21,7 +21,7 @@
         </div>
     {% endfor %}
 
-
+<body>
     <div class="container-accueil">
         <img class="imgA" src="{{ asset('assets/img/accueil.png') }}">
         <div class="textA">
@@ -76,7 +76,7 @@
         </div>
     </form>
 
-
+</body>
     <!-- Footer -->
     <footer>
         <!-- Copyright -->
@@ -86,6 +86,7 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
+
 {% endblock %}
 
 
