--- a/templates/base.css
+++ b/templates/base.css
@@ -1,6 +1,6 @@
 footer {
     background-color: #333;
-    color: #fff;
+    color: red;
     text-align: center;
     padding: 20px;
     position: fixed;
