--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,17 +3,94 @@
 {% block title %}Hello ContactController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulaire de Contact</title>
+    <style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            margin-left: 25%;
+            margin-top: 80px;
+        }
 
-    </ul>
-</div>
+        label {
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        .titlecontact {
+        margin-left: 35%;
+        font-size: 40px;
+        font-family: Arial;
+        text-decoration: underline;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+<body>
+
+{% for message in app.flashes('success') %}
+        <div class="container alert alert-success" style="font-size: large">
+            {{ message }}
+        </div>
+    {% endfor %}
+
+<h2 class="titlecontact">Contactez nous par mail!</h2>
+
+    <form action="#" method="post">
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email :</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Message :</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit">Envoyer</button>
+        <button type="button" onclick="effacer()" > Effacer </button>
+    </form>
+</body>
+
+<script>
+
+function effacer(){
+    document.getElementById('name').value="";
+    document.getElementById('email').value="";
+    document.getElementById('message').value="";
+}
+</script>
+
+</html>
+
 {% endblock %}
